--- a/index.html
+++ b/index.html
@@ -1,37 +1,66 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="dark scroll-smooth">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Cosmic Portfolio</title>
-<link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>John Doe | Full-Stack Developer</title>
+  <script src="https://cdn.tailwindcss.com/4.1.0"></script>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-<header>
-<h1>John Doe</h1>
-<p>Full-Stack Senior Developer</p>
-<button id="theme-toggle" aria-label="Toggle Dark Mode">Toggle Theme</button>
-</header>
-<section id="about">
-<h2>About Me</h2>
-<p>I build web and mobile applications using modern technologies.</p>
-</section>
-<section id="projects">
-<h2>Projects</h2>
-<div class="project-grid">
-<div class="project-item">
-<h3>Project One</h3>
-<p>Description of project one.</p>
-</div>
-<div class="project-item">
-<h3>Project Two</h3>
-<p>Description of project two.</p>
-</div>
-</div>
-</section>
-<footer>
-<p>&copy; <span id="year"></span> John Doe</p>
-</footer>
-<script src="script.js"></script>
+  <header class="text-center py-16 bg-gradient-to-b from-gray-900 to-black">
+    <h1 class="text-5xl font-bold tracking-tight">John Doe</h1>
+    <p class="text-xl mt-2">Full-Stack Senior Developer</p>
+    <button id="theme-toggle" class="mt-6 px-4 py-2 border rounded text-sm">Toggle Theme</button>
+  </header>
+  <main>
+    <section id="about" class="container mx-auto px-4 py-16">
+      <h2 class="text-3xl font-semibold mb-4">About Me</h2>
+      <p class="leading-relaxed">I build web and mobile applications using modern technologies. I enjoy crafting delightful digital experiences and solving complex problems.</p>
+    </section>
+    <section id="skills" class="container mx-auto px-4 py-16 bg-gray-800 bg-opacity-80">
+      <h2 class="text-3xl font-semibold mb-4">Skills</h2>
+      <ul class="grid grid-cols-2 sm:grid-cols-3 md:grid-cols-4 gap-4">
+        <li>JavaScript</li>
+        <li>React</li>
+        <li>Node.js</li>
+        <li>Python</li>
+        <li>HTML5</li>
+        <li>CSS3</li>
+        <li>TailwindCSS</li>
+        <li>SQL</li>
+      </ul>
+    </section>
+    <section id="projects" class="container mx-auto px-4 py-16">
+      <h2 class="text-3xl font-semibold mb-8">Projects</h2>
+      <div class="grid gap-8 md:grid-cols-2 lg:grid-cols-3">
+        <article class="project-item bg-gray-800 bg-opacity-80 p-6">
+          <h3 class="text-xl font-bold mb-2">Project One</h3>
+          <p>A brief description of project one.</p>
+        </article>
+        <article class="project-item bg-gray-800 bg-opacity-80 p-6">
+          <h3 class="text-xl font-bold mb-2">Project Two</h3>
+          <p>A brief description of project two.</p>
+        </article>
+        <article class="project-item bg-gray-800 bg-opacity-80 p-6">
+          <h3 class="text-xl font-bold mb-2">Project Three</h3>
+          <p>A brief description of project three.</p>
+        </article>
+      </div>
+    </section>
+    <section id="contact" class="container mx-auto px-4 py-16 bg-gray-800 bg-opacity-80">
+      <h2 class="text-3xl font-semibold mb-4">Contact</h2>
+      <form id="contact-form" class="space-y-4 max-w-md">
+        <input type="text" name="name" class="w-full p-2 rounded text-black" placeholder="Name" required>
+        <input type="email" name="email" class="w-full p-2 rounded text-black" placeholder="Email" required>
+        <textarea name="message" rows="5" class="w-full p-2 rounded text-black" placeholder="Message" required></textarea>
+        <button type="submit" class="px-4 py-2 bg-indigo-600 hover:bg-indigo-700 rounded text-white">Send</button>
+      </form>
+    </section>
+  </main>
+  <footer class="text-center py-6 bg-black bg-opacity-70">
+    <p>&copy; <span id="year"></span> John Doe. All rights reserved.</p>
+  </footer>
+  <script src="script.js"></script>
 </body>
 </html>
